--- a/MyLocality/app/src/main/res/layout/activity_login.xml
+++ b/MyLocality/app/src/main/res/layout/activity_login.xml
@@ -15,12 +15,12 @@
         android:padding="@dimen/activity_horizontal_margin">
 
 
-        <ImageView
+        <!--<ImageView
             android:layout_width="@dimen/logo_w_h"
             android:layout_height="@dimen/logo_w_h"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="30dp"
-            android:src="@mipmap/dogpope" />
+            android:src="@mipmap/dogpope" /> -->
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -79,12 +79,12 @@
             android:id="@+id/btn_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dip"
+
             android:background="@null"
             android:text="@string/btn_link_to_register"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
     </LinearLayout>
 
     <ProgressBar
