--- a/MyLocality/app/src/main/res/layout/activity_main.xml
+++ b/MyLocality/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,6 @@
     android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        app:elevation="0dp">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimaryDark"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -55,10 +40,10 @@
             android:layout_height="wrap_content"
             android:focusableInTouchMode="true"
             android:hint="@string/prompt_password"
-            android:imeActionId="@+id/login"
             android:imeOptions="actionUnspecified"
             android:inputType="textPassword"
             android:maxLines="1" />
+        <!--android:imeActionId="@+id/login"-->
 
         <EditText
             android:id="@+id/newPassword"
@@ -66,10 +51,11 @@
             android:layout_height="wrap_content"
             android:focusableInTouchMode="true"
             android:hint="@string/new_pass"
-            android:imeActionId="@+id/login"
             android:imeOptions="actionUnspecified"
             android:inputType="textPassword"
-            android:maxLines="1" />
+            android:maxLines="1"             />
+        <!--android:imeActionId="@+id/login"-->
+
 
         <Button
             android:id="@+id/changeEmail"
